--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ImageMap</string>
     <string name="pick_the_bone">Pick the : %s bone</string>
+    <string name="demo_image">Demo image</string>
+    <string name="demo_string">Demo name</string>
 </resources>
